feat(plh) : Ajout des endpoints PLH + recherche TypePLH
